test/compile-fail/resolution/conflicts/struct-use-rename/top.rhdl
struct a {}
mod b {
    pub enum c {}
}
use b::c as a;
